con los perfiles y cerrados

--- a/registrar/index.html
+++ b/registrar/index.html
@@ -22,16 +22,6 @@
             </div>
         </div>
     </div>
-    <div id="modal" class="modal">
-        <div class="modal-content">
-            <div class="modal-body">
-                <p>Some text in the Modal Body</p>
-            </div>
-            <div class="modal-footer">
-                <button class="ingresar" type="button">Ok</button>
-            </div>
-        </div>
-    </div>
     <header>
         <div>
             <img class="logo" src="https://cdn.freebiesupply.com/logos/large/2x/random-house-bertelsmann-logo-black-and-white.png" alt="Imagen de logo bonito">
@@ -42,7 +32,10 @@
                 <a href="index.html">
                     <button type="button">Registrar usuario</button>
                 </a>
-                <button class="oculto" type="button">Ver perfil</button>
+                <a href="../perfil/index.html">
+                    <button type="button">Ver perfil</button>
+                </a>
+                <button class="oculto" type="button">Cerrar sesión</button>
             </div>
         </div>
         <div>
