--- a/iniciar/index.html
+++ b/iniciar/index.html
@@ -32,7 +32,10 @@
                 <a href="../registrar/index.html">
                     <button type="button">Registrar usuario</button>
                 </a>
-                <button class="oculto" type="button">Ver perfil</button>
+                <a href="../perfil/index.html">
+                    <button type="button">Ver perfil</button>
+                </a>
+                <button class="oculto" type="button">Cerrar sesión</button>
             </div>
         </div>
         <div>
