--- a/modificar_perfil/index.html
+++ b/modificar_perfil/index.html
@@ -31,7 +31,10 @@
                 <a href="index.html">
                     <button type="button">Registrar usuario</button>
                 </a>
-                <button class="oculto" type="button">Ver perfil</button>
+                <a href="../perfil/index.html">
+                    <button type="button">Ver perfil</button>
+                </a>
+                <button class="oculto" type="button">Cerrar sesión</button>
             </div>
         </div>
         <div>
