--- a/perfil/index.html
+++ b/perfil/index.html
@@ -31,7 +31,9 @@
                 <a href="../registrar/index.html">
                     <button type="button">Registrar usuario</button>
                 </a>
-                <a href="../perfil/index.html">Ver perfil</a>
+                <a href="../perfil/index.html">
+                    <button type="button">Ver perfil</button>
+                </a>
                 <button class="oculto" type="button">Cerrar sesión</button>
             </div>
         </div>
