--- a/registrar/index.html
+++ b/registrar/index.html
@@ -33,7 +33,7 @@
                     <button type="button">Registrar usuario</button>
                 </a>
                 <a href="../perfil/index.html">
-                    <button type="button">Ver perfil</button>
+                    <button class="oculto" type="button">Ver perfil</button>
                 </a>
                 <button class="oculto" type="button">Cerrar sesión</button>
             </div>
