--- a/todas/index.html
+++ b/todas/index.html
@@ -44,7 +44,7 @@
             <fieldset>
                 <legend>Opciones de filtrado</legend>
                 <label for="ubicacion">Ubicación: </label>
-                <input type="text" name="ubicacion" id="ubicacion">
+                <input onkeydown="" type="text" name="ubicacion" id="ubicacion">
                 <label for="habitaciones">Cantidad de habitaciones: </label>
                 <input type="number" name="habitaciones" id="habitaciones">
                 <label for="baños">Cantidad de baños: </label>
