--- a/todas/index.html
+++ b/todas/index.html
@@ -43,8 +43,8 @@
         <form>
             <fieldset>
                 <legend>Opciones de filtrado</legend>
-                <label for="ubicacion">Ubicación: </label>
-                <input onkeydown="" type="text" name="ubicacion" id="ubicacion">
+                <!-- <label for="ubicacion">Ubicación: </label> -->
+                <!-- <input type="text" name="ubicacion" id="ubicacion"> -->
                 <label for="habitaciones">Cantidad de habitaciones: </label>
                 <input type="number" name="habitaciones" id="habitaciones">
                 <label for="baños">Cantidad de baños: </label>
@@ -52,7 +52,8 @@
                 <label for="antiguedad">Antigüedad: </label>
                 <input type="date" name="antiguedad" id="antiguedad">
                 <label for="metros">Metros cuadrados: </label>
-                <input type="number" name="metros" id="metros">
+                <input type="number" name="metros" id="metros"><br><br>
+                <button type="reset">Reiniciar</button>
             </fieldset>
         </form>
         <section class="inmuebles">
