--- a/compra/index.html
+++ b/compra/index.html
@@ -40,7 +40,7 @@
         </div>
     </header>
     <main>
-        
+        <h1>Un inmueble</h1>
     </main>
     <footer class="centrado">
         <p>
