--- a/compra/index.html
+++ b/compra/index.html
@@ -34,13 +34,23 @@
                     <a href="../index.html">Menú</a>
                 </li>
                 <li>
-                    <a href="index.html">Todas las propiedades</a>
+                    <a href="../todas/index.html">Todas las propiedades</a>
                 </li>
             </ul>
         </div>
     </header>
-    <main>
-        <h1>Un inmueble</h1>
+    <main class="compras">
+        <section>
+            <div class="imagenes"></div>
+        </section>
+        <section>
+            <p>Ubicación: Caracas</p>
+            <p>Precio: 200 $</p>
+            <p>Tamaño (metros cuadrados): 200</p>
+            <p>Cantidad de habitaciones: 12</p>
+            <p>Cantidad de baños: 3</p>
+            <p>Antigüedad: 1 año</p>
+        </section>
     </main>
     <footer class="centrado">
         <p>
