con un nuevo bug

--- a/todas/index.html
+++ b/todas/index.html
@@ -51,8 +51,8 @@
                 <input type="number" name="baños" id="baños">
                 <label for="antiguedad">Antigüedad: </label>
                 <input type="date" name="antiguedad" id="antiguedad">
-                <label for="metros">Metros cuadrados: </label>
-                <input type="number" name="metros" id="metros"><br><br>
+                <label for="metroscuadrados">Metros cuadrados: </label>
+                <input type="number" name="metroscuadrados" id="metroscuadrados"><br><br>
                 <button type="reset">Reiniciar</button>
             </fieldset>
         </form>
