tiene un detalle en la antiguedad pero funciona

--- a/todas/index.html
+++ b/todas/index.html
@@ -46,13 +46,13 @@
                 <!-- <label for="ubicacion">Ubicación: </label>
                 <input type="text" name="ubicacion" id="ubicacion"> -->
                 <label for="habitaciones">Cantidad de habitaciones: </label>
-                <input type="number" name="habitaciones" id="habitaciones">
+                <input type="number" name="habitaciones" id="habitaciones" min="1">
                 <label for="baños">Cantidad de baños: </label>
-                <input type="number" name="baños" id="baños">
+                <input type="number" name="baños" id="baños" min="1">
                 <label for="antiguedad">Antigüedad: </label>
                 <input type="date" name="antiguedad" id="antiguedad">
                 <label for="metroscuadrados">Metros cuadrados: </label>
-                <input type="number" name="metroscuadrados" id="metroscuadrados"><br><br>
+                <input type="number" name="metroscuadrados" id="metroscuadrados" min="1"><br><br>
                 <button type="reset">Reiniciar</button>
             </fieldset>
         </form>
