muchas mas modificaciones

--- a/compra/index.html
+++ b/compra/index.html
@@ -39,7 +39,7 @@
             </ul>
         </div>
     </header>
-    <main class="compras">
+    <main>
         <section>
             <div class="imagenes"></div>
         </section>
