--- a/perfil/index.html
+++ b/perfil/index.html
@@ -54,8 +54,9 @@
             <h2>Información del perfil</h2>
             <div>
                 <p>Nombres: Eduardo Matías</p>
-                <p>Correo: correo@gmail.com</p>
                 <p>Apellidos: Castañueda Garcíaz</p>
+                <p>Correo: correo@gmail.com</p>
+                <p>Nacimiento: hace mucho tiempo</p>
                 <p>Cédula: 12232423</p>
                 <p>Dirección: Al lado de una esquina</p>
             </div>
