--- a/compra/index.html
+++ b/compra/index.html
@@ -44,12 +44,17 @@
             <div class="imagenes"></div>
         </section>
         <section>
-            <p>Ubicación: Caracas</p>
-            <p>Precio: 200 $</p>
-            <p>Tamaño (metros cuadrados): 200</p>
-            <p>Cantidad de habitaciones: 12</p>
-            <p>Cantidad de baños: 3</p>
-            <p>Antigüedad: 1 año</p>
+            <div>
+                <p>Ubicación: Caracas</p>
+                <p>Precio: 200 $</p>
+                <p>Tamaño (metros cuadrados): 200</p>
+                <p>Cantidad de habitaciones: 12</p>
+                <p>Cantidad de baños: 3</p>
+                <p>Antigüedad: 1 año</p>
+            </div>
+            <div>
+                
+            </div>
         </section>
     </main>
     <footer class="centrado">
