--- a/compra/index.html
+++ b/compra/index.html
@@ -53,7 +53,7 @@
                 <p>Antigüedad: 1 año</p>
             </div>
             <div>
-                
+                <button></button>
             </div>
         </section>
     </main>
