mejorado con sus index

--- a/perfil/index.html
+++ b/perfil/index.html
@@ -64,9 +64,15 @@
         <section>
             <h2>Opciones de perfil</h2>
             <div>
-                <button type="button">Modificar perfil</button>
-                <button type="button">Cambiar contraseña</button>
-                <button type="button">Ver historial de visitas</button>
+                <a href="../modificar_perfil/index.html">
+                    <button type="button">Modificar perfil</button>
+                </a>
+                <a href="../contraseña/index.html">
+                    <button type="button">Cambiar contraseña</button>
+                </a>
+                <a href="../historial/index.html">
+                    <button type="button">Ver historial de visitas</button>
+                </a>
             </div>
         </section>
     </main>
