--- a/modificar_perfil/index.html
+++ b/modificar_perfil/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../assets/casita.ico" type="image/x-icon">
     <link rel="stylesheet" href="../style.css">
+    <script src="index.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Dancing+Script:wght@400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -32,7 +33,7 @@
                     <button type="button">Registrar usuario</button>
                 </a>
                 <a href="../perfil/index.html">
-                    <button type="button">Ver perfil</button>
+                    <button class="oculto" type="button">Ver perfil</button>
                 </a>
                 <button class="oculto" type="button">Cerrar sesión</button>
             </div>
