--- a/contraseña/index.html
+++ b/contraseña/index.html
@@ -12,6 +12,16 @@
     <title>Iniciar sesión</title>
 </head>
 <body>
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-body">
+                <p>Some text in the Modal Body</p>
+            </div>
+            <div class="modal-footer">
+                <button class="ingresar" type="button">Ok</button>
+            </div>
+        </div>
+    </div>
     <header>
         <div>
             <img class="logo" src="https://cdn.freebiesupply.com/logos/large/2x/random-house-bertelsmann-logo-black-and-white.png" alt="Imagen de logo bonito">
@@ -43,9 +53,11 @@
         <form>
             <fieldset>
                 <legend>Cambiar contraseña</legend>
-                <label for="contraseña">Contraseña: </label>
+                <label for="antigua">Contraseña antigua: </label>
+                <input type="password" name="antigua" id="antigua" required><br><br>
+                <label for="contraseña">Contraseña nueva: </label>
                 <input type="password" name="contraseña" id="contraseña" required><br><br>
-                <label for="repetida">Contraseña (de nuevo): </label>
+                <label for="repetida">Contraseña nueva (de nuevo): </label>
                 <input type="password" name="repetida" id="repetida" required><br><br>
                 <button type="submit">Cambiar</button>
             </fieldset>
