--- a/modificar_perfil/index.html
+++ b/modificar_perfil/index.html
@@ -17,8 +17,8 @@
             <div class="modal-body">
                 <p>Some text in the Modal Body</p>
             </div>
-            <div class="modal-footer">
-                <button class="ingresar" type="button">Ok</button>
+            <div style="text-align: center;" class="modal-footer">
+                <button class="" type="button">Ok</button>
             </div>
         </div>
     </div>
