--- a/historial/index.html
+++ b/historial/index.html
@@ -50,7 +50,9 @@
         </div>
     </header>
     <main>
-        <h1>Historial</h1>
+        <h2>Historial de compras</h2>
+        <section class="inmuebles">
+        </section>
     </main>
     <footer class="centrado">
         <p>
