con grandes mejoras

--- a/compra/index.html
+++ b/compra/index.html
@@ -18,7 +18,25 @@
                 <p>Some text in the Modal Body</p>
             </div>
             <div style="text-align: center;" class="modal-footer">
-                <button class="" type="button">Ok</button>
+                <button class="ingresar" type="button">Ok</button>
+            </div>
+        </div>
+    </div>
+    <div id="tramite" class="modal">
+        <div class="modal-content">
+            <div class="modal-body">
+                <h2>Trámite</h2>
+                <form>
+                    <label for="correo">Correo: </label>
+                    <input type="email" name="correo" id="correo">
+                    <label for="nombre">Nombre completo: </label>
+                    <input type="text" name="nombre" id="nombre">
+                    <label for="telefono">Teléfono: </label>
+                    <input type="tel" name="telefono" id="telefono">
+                    <div style="text-align: center;" class="modal-footer">
+                        <button class="ingresar" type="submit">Hacer trámite</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
