--- a/iniciar/index.html
+++ b/iniciar/index.html
@@ -17,7 +17,7 @@
             <div class="modal-body">
                 <p>Some text in the Modal Body</p>
             </div>
-            <div class="modal-footer">
+            <div style="text-align: center;" class="modal-footer">
                 <button class="ingresar" type="button">Ok</button>
             </div>
         </div>
