--- a/iniciar/index.html
+++ b/iniciar/index.html
@@ -18,7 +18,7 @@
                 <p>Some text in the Modal Body</p>
             </div>
             <div style="text-align: center;" class="modal-footer">
-                <button class="ingresar" type="button">Ok</button>
+                <button style="margin-bottom: 10px;" class="ingresar" type="button">Ok</button>
             </div>
         </div>
     </div>
