--- a/compra/index.html
+++ b/compra/index.html
@@ -28,9 +28,9 @@
                 <h2>Trámite</h2>
                 <form>
                     <label for="correo">Correo: </label>
-                    <input type="email" name="correo" id="correo">
+                    <input type="email" name="correo" id="correo"><br><br>
                     <label for="nombre">Nombre completo: </label>
-                    <input type="text" name="nombre" id="nombre">
+                    <input type="text" name="nombre" id="nombre"><br><br>
                     <label for="telefono">Teléfono: </label>
                     <input type="tel" name="telefono" id="telefono">
                     <div style="text-align: center;" class="modal-footer">
